--- a/style.css
+++ b/style.css
@@ -198,6 +198,7 @@ nav {
     position: relative;
     width: 100%;
     height: 100vh;
+    padding-bottom: 660px;
 
 
 
@@ -483,6 +484,7 @@ footer {
         position: relative;
         width: 100%;
         height: 100vh;
+        padding-bottom: 570px;
 
 
 
@@ -504,7 +506,7 @@ footer {
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        top: 18%;
+        top: 09.5%;
         left: 15%;
 
 
